include forms and create a new resturant

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,3 +17,10 @@ body {
     padding-top: 0 !important;
     height: 100vh;
 }
+
+.form-container {
+    max-width: 800px;
+    margin: auto;
+    padding-top: 16px;
+
+}
