--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -3,6 +3,11 @@
     margin: auto;
     padding: 16px 0;
 }
+.messages-container {
+    max-width: 1200px;
+    margin: auto;
+    padding: 16px 0;
+}
 
 .restaurants {
     padding: 16px 8px;
@@ -10,3 +15,4 @@
         padding: 8px;
     }
 }
+
