--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -16,3 +16,16 @@
     }
 }
 
+.btn-naked {
+    border: none;
+    background: none;
+    padding: 0;
+    cursor: pointer;
+    color: red;
+}
+
+.ingredient-label {
+    margin: 0;
+    line-height: 0.7;
+}
+
