--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,7 @@
 
 //page
 @import  'admin';
+@import 'landing';
 
 .navbar-laravel {
   background-color: #fff;
@@ -25,5 +26,4 @@ body {
     max-width: 800px;
     margin: auto;
     padding-top: 16px;
-
 }
