--- a/resources/sass/landing.scss
+++ b/resources/sass/landing.scss
@@ -2,6 +2,8 @@
 
 .landing-container {
 
+	font-family: 'Open Sans', sans-serif;
+
 	a {
 		text-decoration: none;
 	}
@@ -12,8 +14,7 @@
         text-align: center;
         font-weight: 100;
         width: 80%;
-		margin-top: 64px;
-        margin: auto;
+		margin: 64px auto;
 
         .sub-tag {
             font-size: 22px;
@@ -29,6 +30,42 @@
 		button {
 			font-size: 200%;
 		}
+	}
+
+
+	.showoff {
+
+		padding: 32px 0;
+
+		.item {
+			display: grid;
+			grid-template-columns: repeat(2,1fr);
+			column-gap: 40px;
+			height: 100%;
+			width: 70%;
+			max-width: 1000px;
+			margin: auto;
+			align-items: center;
+
+			.img-container {
+				background-color: white;
+				border: 2px solid black;
+			}
+			img {
+				width: 100%;
+			}
+
+			.explanation {
+				color: white;
+				font-size: 130%;
+				.explanation-title {
+					margin-bottom: 8px;
+					font-size: 200%;
+				}
+
+			}
+		}
+
 	}
 }
 
